<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray1"
    >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    >
	    
        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:background="@color/bg_green"
	        >
	     	        
	     	<Button
	            android:id="@+id/answer_question_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_alignParentRight="true"
	            android:layout_marginRight="15dp"
	            android:background="@null"
	            android:text="@string/answer_question_text7"
		        android:textColor="#ffffff"
		        android:textSize="@dimen/word_small"
	            />
	        
	    </RelativeLayout>
	    
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="15dp"
	        android:text="@string/answer_question_text1"
	        android:textColor="#000000"
	        android:textSize="@dimen/word_small"
	        />
        
        <EditText
            android:id="@+id/answer_question_input1"
	        android:layout_width="match_parent"
	        android:layout_height="220dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="#ffffff"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:paddingTop="7dp"
	        android:paddingBottom="7dp"
	        android:textSize="@dimen/word_small"
	        android:hint="@string/answer_question_text2"
		    android:inputType="textMultiLine"
			android:singleLine="false"
			android:scrollHorizontally="false"
			android:gravity="top"
            />
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="15dp"
	        android:text="@string/answer_question_text3"
	        android:textColor="#000000"
	        android:textSize="@dimen/word_small"
	        />
        
        <EditText 
            android:id="@+id/answer_question_input2"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="#ffffff"
	        android:paddingLeft="10dp"
	        android:textSize="@dimen/word_small"
	        android:hint="@string/answer_question_text4"
		    android:inputType="text"
			android:singleLine="false"
			android:scrollHorizontally="false"
            />
        
        <EditText 
            android:id="@+id/answer_question_input3"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="#ffffff"
	        android:paddingLeft="10dp"
	        android:textSize="@dimen/word_small"
	        android:hint="@string/answer_question_text5"
		    android:inputType="text"
			android:singleLine="false"
			android:scrollHorizontally="false"
            />
        
        <EditText 
            android:id="@+id/answer_question_input4"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="7dp"
	        android:layout_marginRight="7dp"
	        android:background="#ffffff"
	        android:paddingLeft="10dp"
	        android:textSize="@dimen/word_small"
	        android:hint="@string/answer_question_text6"
		    android:inputType="textEmailAddress"
			android:singleLine="false"
			android:scrollHorizontally="false"
            />
	
	</LinearLayout>
    
</ScrollView>