<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/bg_gray1"
    >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    >
	    
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:background="@color/bg_green"
	        >
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/title2"
		        android:textSize="@dimen/word_big"
		        android:textColor="#ffffff"
		        android:layout_centerInParent="true"
		        />
	        
	    </RelativeLayout>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_time_text1"
	        android:textSize="@dimen/word_big"
	        android:textColor="@color/bg_gray8"
	        android:layout_marginTop="24dp"
	        android:layout_marginLeft="24dp"
	        />
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_time_text2"
	        android:textSize="@dimen/word_small"
	        android:textColor="@color/bg_gray8"
	        android:layout_marginTop="24dp"
	        android:layout_marginLeft="24dp"
	        android:layout_marginRight="24dp"
	        android:lineSpacingMultiplier="1.2"
	        />
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_time_text3"
	        android:textSize="@dimen/word_small"
	        android:textColor="@color/bg_gray8"
	        android:layout_marginTop="32dp"
	        android:layout_marginLeft="24dp"
	        android:layout_marginRight="24dp"
	        />
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choose_time_text4"
	        android:textSize="@dimen/word_micro"
	        android:textColor="@color/bg_gray8"
	        android:layout_marginTop="2dp"
	        android:layout_marginLeft="24dp"
	        />
	    
	    <Button 
			android:id="@+id/choose_time_button1"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:background="@drawable/big_round_button_orange"
			android:textSize="@dimen/word_small"
			android:textColor="#ffffff"
			android:layout_marginTop="80dp"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:gravity="center|left"
			/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
			android:layout_height="45dp"
			android:orientation="horizontal"
			android:layout_marginTop="20dp"
	        >
	        
	        <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/advise"
		        android:textSize="@dimen/word_micro"
		        android:textColor="@color/bg_orange"
		        android:layout_gravity="center"
		        android:layout_marginLeft="12dp"
		        />
	        
	        <Button 
				android:id="@+id/choose_time_button2"
				android:layout_width="match_parent"
				android:layout_height="45dp"
				android:background="@drawable/big_round_button_orange"
				android:textSize="@dimen/word_small"
				android:textColor="#ffffff"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="40dp"
				android:gravity="center|left"
				/>
	        
	    </LinearLayout>
	    
	    <Button 
			android:id="@+id/choose_time_button3"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:background="@drawable/big_round_button_orange"
			android:textSize="@dimen/word_small"
			android:textColor="#ffffff"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:gravity="center|left"
			/>
	
	</LinearLayout>
    
</ScrollView>
