<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="285dp" 
    android:background="#00000000"
    >
    
    <RelativeLayout 
        android:id="@+id/choose_guide_lis_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:background="#ffffff"
        >
        
        <TextView 
	        android:id="@+id/choose_guide_list_footer_text1"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/bg_gray8"
			android:textSize="@dimen/word_big"
			android:layout_centerHorizontal="true"
			android:text="@string/choose_guide_text2"
			android:layout_marginTop="16dp"
	        />
	    
	    <ImageView
	        android:id="@+id/choose_guide_list_footer_image"
	        android:layout_width="80dp"
	        android:layout_height="100dp"
	        android:layout_below="@+id/choose_guide_list_footer_text1"
	        android:layout_marginLeft="15dp"
	        android:layout_marginTop="10dp"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/app_name"
	        android:src="@drawable/help_self" />
	    
	    <TextView 
	        android:id="@+id/choose_guide_list_footer_text2"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/bg_gray6"
			android:textSize="@dimen/word_small"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:lineSpacingMultiplier="1.2"
			android:text="@string/choose_guide_text3"
			android:layout_below="@+id/choose_guide_list_footer_text1"
			android:layout_marginTop="10dp"
			android:layout_toRightOf="@+id/choose_guide_list_footer_image"
	        />
	    
	    <TextView 
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/bg_gray6"
			android:textSize="@dimen/word_small"
			android:lineSpacingMultiplier="1.3"
			android:text="@string/choose_guide_text4"
			android:layout_below="@+id/choose_guide_list_footer_text2"
			android:layout_alignLeft="@+id/choose_guide_list_footer_text2"
			android:layout_alignRight="@+id/choose_guide_list_footer_text2"
	        />
	    
	    <View 
	        android:id="@+id/choose_guide_list_footer_view"
	        android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="@color/bg_gray2"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_marginTop="20dp"
			android:layout_below="@+id/choose_guide_list_footer_image"
	        />
	   <Button 
				android:id="@+id/choose_guide_list_footer_button"
				android:layout_width="68dp"
				android:layout_height="34dp"
				android:background="@drawable/round_button_orange"
				android:textSize="@dimen/word_small"
				android:text="@string/choose_guide_text5"
				android:textColor="#ffffff"
				android:layout_alignParentRight="true"
				android:layout_marginRight="15dp"
				android:layout_below="@+id/choose_guide_list_footer_view"
				android:layout_marginTop="12dp"
				/>
		<View 
		    android:layout_width="1dp"
		    android:layout_height="1dp"
		    android:background="#00000000"
		    android:layout_below="@+id/choose_guide_list_footer_button"
		    android:layout_marginTop="11dp"
		    />
        
    </RelativeLayout>
    
    <View 
		    android:layout_width="1dp"
		    android:layout_height="1dp"
		    android:background="#00000000"
		    android:layout_below="@+id/choose_guide_lis_footer_layout"
		    android:layout_marginTop="14dp"
		    />

</RelativeLayout>
